fixed editbutton visibility control of modal!!!! begun work on editing function

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -197,7 +197,13 @@ h2 {
   font-weight: 550;
 }
 
+.modalBackgroundOverlay{
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background: red;
 
+}
 
 
 /* @tailwind base;
